--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env.local
 .idea
 __pycache__/
-luna_scripts/listing_scripts/last-new-listing.txt
-luna_scripts/listing_scripts/mailing_list.txt
+outputs
+trades
