email address is in env

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 # create a file called .env.local and put your api_key and secret there
+# put sender email and its password if you want to send mails
 api_key=""
 api_secret=""
+email=""
 email_password=""
