more .env variables for mailing

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-# create a file called .env.local and put your api_key and secret there
-# put sender email and its password if you want to send mails
+# create a file called .env.local, this is just a template
 api_key=""
 api_secret=""
+
+ssl_port=465 # outgoing mail port
+smtp_server="smtp.gmail.com" # for gmail
 email=""
 email_password=""
