--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ setuptools = "*"
 twisted = {path = "./Twisted-20.3.0-cp39-cp39-win_amd64.whl"}
 python-binance = "*"
 python-dotenv = "*"
+matplotlib = "*"
 
 [dev-packages]
 
