--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ ssl_port=465 # outgoing mail port
 smtp_server="smtp.gmail.com" # for gmail
 email=""
 email_password=""
+
+# test keys, these are optional if you want to run some tests
+# get from https://testnet.binance.vision/key/generate
+test_key=""
+test_secret=""
