--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@
 __pycache__/
 outputs/
 trades/
-luna_scripts/listing_mail/mailing_list.txt
-/gathered/.env.local
+luna_scripts/listing_mail/mailing_list.db
