--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ twisted = {path = "./Twisted-20.3.0-cp39-cp39-win_amd64.whl"}
 python-binance = "*"
 python-dotenv = "*"
 matplotlib = "*"
+websocket = "*"
 
 [dev-packages]
 
