--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # create a file called .env.local, this is just a template
-api_key=""
-api_secret=""
-
 ssl_port=465 # outgoing mail port
 smtp_server="smtp.gmail.com" # for gmail
 email=""
 email_password=""
+
+#required only if you want to do actual spot trading
+api_key=""
+api_secret=""
 
 # test keys, these are optional if you want to run some tests
 # get from https://testnet.binance.vision/key/generate
