--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 setuptools = "*"
 twisted = {path = "./Twisted-20.3.0-cp39-cp39-win_amd64.whl"}
-python-binance = "==0.7.10"
+python-binance = "*"
 python-dotenv = "*"
 matplotlib = "*"
 websocket-client = "*"
