--- a/.env
+++ b/.env
@@ -1,10 +1,15 @@
 # create a file called .env.local, this is just a template
+
+# for auto emailing
 ssl_port=465 # outgoing mail port
 smtp_server="smtp.gmail.com" # for gmail
 email=""
 email_password=""
 
-#required only if you want to do actual spot trading
+# discord bot
+discord_token = ""
+
+# required only if you want to do actual spot trading
 api_key=""
 api_secret=""
 
