--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 __pycache__/
 outputs/
 trades/
+historical_trades/
 luna_modules/email/mailing_list.db
 luna_scripts/meme/database.db
 luna_scripts/meme/err.log
