--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .idea
 __pycache__/
 outputs/
-trades/
+live_trades/
 historical_trades/
 luna_modules/email/mailing_list.db
 luna_scripts/meme/database.db
